--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lunch
-spring.datasource.username=root
-spring.datasource.password=rezdytechtask
+spring.datasource.url=jdbc:${DB_DRIVER_TYPE:mysql}://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:lunch}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:rezdytechtask}
